# banban_EduAI_VideoGen

./: .gitignore  README.md  cloudbuild.yaml  dockerfile  pyproject.toml
app/: main.py
app/core/: __init__.py  config.py  logger.py  mongodb.py
app/middleware/: __init__.py  custom.py
app/modules/video/: constants.py  prompt.py  router.py  schema.py  service.py
data/: request.json
